# pipeline_holmes_with_dbt

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/config/: log_config.py
app/dags/: process_pipeline_append_dag.py  process_pipeline_full_dag.py
app/dags/tasks/: process_pipeline_execution.py
app/data/: database.py
app/data/models/: silver.py
app/domain/: errors.py  etl_service.py  value_objects.py
app/domain/agreggates/: processo.py
app/domain/repositories/: repository.py
app/infra/etl/: canceling_process_etl_service.py
app/infra/etl/rules/: __init__.py
app/infra/etl/utils/: data_treatments.py
app/infra/repositories/: SQLALchemy_process_repository.py
app/infra/services/: http_resources_service.py
docker/: airflow.dockerfile
etl_dbt/: dbt_project.yml  profiles.yml
etl_dbt/models/gold/: dim_autor.sql  dim_categoria_cancelamento.sql  dim_empresas.sql  dim_tipo_nota.sql  fat_processos.sql  schema.yml
etl_dbt/models/silver/: processos.sql  schema.yml
