[tool.poetry]
name = "pipeline-holmes-with-dbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
sqlalchemy = "<2.0"
dbt-postgres = "^1.9.0"
python-dotenv = "^1.1.1"
pytest-asyncio = "^1.0.0"
result = "^0.17.0"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false

